[gd_scene load_steps=24 format=2]

[ext_resource path="res://Shadows/SmallShadow.png" type="Texture" id=1]
[ext_resource path="res://NPC/script/snake_bug.gd" type="Script" id=2]
[ext_resource path="res://Enemies/picture/snake/enemy05_sheet.png" type="Texture" id=3]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=4]
[ext_resource path="res://Overlap/SoftCollision.tscn" type="PackedScene" id=5]
[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=7]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=8]
[ext_resource path="res://WhiteColor.shader" type="Shader" id=9]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=10]
[ext_resource path="res://Music and Sounds/monster/hissing-84749.wav" type="AudioStream" id=11]

[sub_resource type="ShaderMaterial" id=14]
shader = ExtResource( 9 )
shader_param/active = true

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:material:shader_param/active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=15]
resource_name = "Start"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=16]
resource_name = "Stop"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=17]
resource_name = "attack"
length = 0.8
loop = true
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "activate_hitbox"
}, {
"args": [  ],
"method": "deactivate_hitbox"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.979685, 1.06239 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 15, 15, 16, 17, 18, 18, 19, 20, 20 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=7]
resource_name = "walk"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12, 13, 14 ]
}

[sub_resource type="CapsuleShape2D" id=10]
radius = 4.0
height = 0.0

[sub_resource type="CircleShape2D" id=11]
radius = 69.0

[sub_resource type="CircleShape2D" id=12]
radius = 7.0

[sub_resource type="CircleShape2D" id=13]
radius = 22.0

[sub_resource type="CircleShape2D" id=18]
radius = 27.0

[node name="snake_bug" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="shadow" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -1 )
texture = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
material = SubResource( 14 )
position = Vector2( 6, -18 )
scale = Vector2( 0.509461, 0.525743 )
texture = ExtResource( 3 )
hframes = 24
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Stop"
anims/RESET = SubResource( 1 )
anims/Start = SubResource( 15 )
anims/Stop = SubResource( 16 )
anims/attack = SubResource( 17 )
anims/idle = SubResource( 2 )
anims/walk = SubResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -1 )
shape = SubResource( 10 )

[node name="SoftCollision" parent="." instance=ExtResource( 5 )]

[node name="WanderController" parent="." instance=ExtResource( 4 )]

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 7 )]
visible = false

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
position = Vector2( 0, -14 )
shape = SubResource( 11 )

[node name="Hurtbox" parent="." instance=ExtResource( 6 )]
visible = false
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 1, -7 )
shape = SubResource( 12 )

[node name="Hitbox" parent="." instance=ExtResource( 8 )]
visible = false
position = Vector2( 34.7594, -13.6676 )
rotation = -2.21831
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 20.629, -26.7255 )
rotation = -0.888373
shape = SubResource( 13 )
disabled = true

[node name="Stats" parent="." instance=ExtResource( 10 )]
max_health = 1

[node name="attack_range" parent="." instance=ExtResource( 7 )]
visible = false

[node name="CollisionShape2D" parent="attack_range" index="0"]
modulate = Color( 0, 0.976471, 0.976471, 1 )
position = Vector2( 0, -11 )
shape = SubResource( 18 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="PlayerDetectionZone"]
[editable path="Hurtbox"]
[editable path="Hitbox"]
[editable path="attack_range"]
